# pyMOI

./: README.md  pyproject.toml
src/pymoi/: __init__.py  main.py  models.py
